# traum0123

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  =1  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  headers.txt  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
alembic/: README  env.py
app/: __init__.py  main.py
core/: __init__.py  auth.py  db.py  exporter.py  fields.py  locks.py  logging_utils.py  metrics.py  observability.py  rate_limit.py  schema.py  settings.py
docs/: DEPLOY_GCP.md  DR_RUNBOOK.md  FRONTEND.md  OPERATIONS.md  PERFORMANCE.md  QA_CHECKLIST.md
frontend/: package.json  vite.config.js
gateway/: app.py
payroll_api/: __init__.py  database.py  main.py  models.py  schemas.py
payroll_portal/: (주)세일즈맵-202510.xlsx  README.md  __init__.py  models.py  requirements.txt  test_export.xlsx  test_export_prorated.xlsx  급여업로드양식(데이터베이스)..xlsx
payroll_shared/: alembic_utils.py  auth.py  exporter.py  locks.py  models.py
scripts/: backup_db.py  build_static.py  deploy_cloud_run.sh  dev_seed.py  healthcheck.py  make_migration.py  manage.py  verify_migrations.py
tests/: conftest.py  test_access_control_endpoints.py  test_admin_authz.py  test_admin_endpoints_authz_matrix.py  test_csrf.py  test_csrf_origin.py  test_csrf_origin_block.py  test_excel_export.py  test_export_edgecases.py  test_export_endpoint.py  test_export_headers.py  test_export_proration.py  test_export_signature.py  test_field_configs_roles.py  test_http_endpoints.py  (+28 more)
(+90 files in other folders)
