[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payroll-portal"
version = "0.1.0"
description = "Payroll portal and API (FastAPI + SQLAlchemy + Jinja)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "traum0123" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "alembic*", "payroll_portal*"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
  ".venv",
  ".venv_ci",
  ".git",
  "alembic/versions",  # migration scripts can be verbose
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
  "E203",  # whitespace before ':' (formatter compat)
  "E266",  # too many leading '#' for block comment
  "E501",  # line length handled by formatter/review
  "F401",  # unused imports (allow while iterating)
  "F403",  # 'from x import *'
  "F405",  # may shadow 'import *' names
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]
"alembic/env.py" = ["E402"]
